--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass": "^1.64.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@pixi/graphics-extras": "^7.2.4",
     "pixi.js": "^7.2.4"
   }
 }
